crates/redoubt-codec/derive/src/tests/snapshots/redoubt_codec_derive__tests__expand__find_root_with_candidates_not_found-2.snap
---
source: crates/redoubt-codec/derive/src/tests/expand.rs
expression: pretty(ts_2)
---
compile_error!(
    "RedoubtCodec: could not find redoubt-codec or redoubt-codec-core. Add redoubt-codec to Cargo.toml.",
);
