crates/redoubt-codec/derive/src/tests/snapshots/redoubt_codec_derive__tests__expand__snapshot_tuple_struct_ok.snap
---
source: crates/redoubt-codec/derive/src/tests/expand.rs
expression: pretty(token_stream)
---
impl redoubt_codec_core::BytesRequired for Data {
    fn encode_bytes_required(&self) -> Result<usize, redoubt_codec_core::OverflowError> {
        let fields: [&dyn redoubt_codec_core::BytesRequired; 3] = [
            redoubt_codec_core::collections::helpers::to_bytes_required_dyn_ref(&self.0),
            redoubt_codec_core::collections::helpers::to_bytes_required_dyn_ref(&self.1),
            redoubt_codec_core::collections::helpers::to_bytes_required_dyn_ref(&self.2),
        ];
        redoubt_codec_core::collections::helpers::bytes_required_sum(fields.into_iter())
    }
}
impl redoubt_codec_core::Encode for Data {
    fn encode_into(
        &mut self,
        buf: &mut redoubt_codec_core::RedoubtCodecBuffer,
    ) -> Result<(), redoubt_codec_core::EncodeError> {
        let fields: [&mut dyn redoubt_codec_core::EncodeZeroize; 3] = [
            redoubt_codec_core::collections::helpers::to_encode_zeroize_dyn_mut(
                &mut self.0,
            ),
            redoubt_codec_core::collections::helpers::to_encode_zeroize_dyn_mut(
                &mut self.1,
            ),
            redoubt_codec_core::collections::helpers::to_encode_zeroize_dyn_mut(
                &mut self.2,
            ),
        ];
        redoubt_codec_core::collections::helpers::encode_fields(fields.into_iter(), buf)
    }
}
impl redoubt_codec_core::Decode for Data {
    fn decode_from(
        &mut self,
        buf: &mut &mut [u8],
    ) -> Result<(), redoubt_codec_core::DecodeError> {
        let fields: [&mut dyn redoubt_codec_core::DecodeZeroize; 3] = [
            redoubt_codec_core::collections::helpers::to_decode_zeroize_dyn_mut(
                &mut self.0,
            ),
            redoubt_codec_core::collections::helpers::to_decode_zeroize_dyn_mut(
                &mut self.1,
            ),
            redoubt_codec_core::collections::helpers::to_decode_zeroize_dyn_mut(
                &mut self.2,
            ),
        ];
        redoubt_codec_core::collections::helpers::decode_fields(fields.into_iter(), buf)
    }
}
